[gd_scene load_steps=2 format=3 uid="uid://d1pc18ju0vh77"]

[ext_resource type="Script" uid="uid://bs6n78u7kfr8" path="res://slices/run/player_status/hook_window/hook_text/hook_text.gd" id="1_lwpmu"]

[node name="HookText" type="PanelContainer"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -165.0
offset_top = -86.5
offset_bottom = 86.5
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("1_lwpmu")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HookName" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Hook Name"
horizontal_alignment = 1

[node name="FunctionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "function () {"

[node name="NoFuncLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "    // No Functions Configured"

[node name="FunctionHolder" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ClosingBracket" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "}"
